apps/snacks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snacks
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: snacks
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: snacks.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snacks
                port:
                  number: 80
